[package]
name = "sse"
version = "0.1.0"
authors = ["yjh0502 <yjh0502@gmail.com>"]

[dependencies]
bitflags = "1"
bytes = "0.4"
error-chain = "0.11"
futures = "0.1"
futures-cpupool = "0.1"
hyper = "0.11"
log = "0.4"
tokio-core = "0.1"
tokio-timer = "0.1"

[dev-dependencies]
env_logger = "0.5"
rand = "0.4"
structopt = "0.2"
structopt-derive = "0.2"
